# AI

./: CMakeLists.txt
GUI/: CMakeLists.txt  CheckpointPG.cpp  CheckpointPG.hpp  ControlPanelCtrl.cpp  ControlPanelCtrl.hpp  EmptyPG.cpp  EmptyPG.hpp  Engine.hpp  IPlayground.hpp  IPopulation.hpp  IProject.hpp  LinesPG.cpp  LinesPG.hpp  MainMenuCtrl.cpp  MainMenuCtrl.hpp  NeatController.cpp  NeatController.hpp  NeatProject.cpp  NeatProject.hpp  ProjectManager.cpp  ProjectManager.hpp  TetrisPG.cpp  TetrisPG.hpp  Trainer.cpp  Trainer.hpp  main.cpp
GUI/panels/: HistoryPanel.cpp  HistoryPanel.hpp  PopulationPanel.cpp  PopulationPanel.hpp  RawOutPanel.cpp  RawOutPanel.hpp  SpeciePanel.cpp  SpeciePanel.hpp  timeutils.hpp
GUI/projects/: NeatPopulation.cpp  NeatPopulation.hpp  NeatProject.cpp  NeatProject.hpp  ProjectBase.cpp  ProjectBase.hpp  SEGProject.cpp  SEGProject.hpp  SGAProject.cpp  SGAProject.hpp
GUI/widgets/: nn_view.cpp  nn_view.hpp  plot.cpp  plot.h
logger/: CMakeLists.txt  Logger.cpp
neat/: CMakeLists.txt  EvolutionStrategy.hpp  InnovationHistory.cpp  InnovationHistory.hpp  Substrate3D.cpp  Substrate3D.hpp  activation.cpp  genom.cpp  genom.hpp  neat.cpp  neat.hpp  neuro_net.cpp  neuro_net.hpp  population.cpp  population.hpp  rng.cpp  rng.hpp
neuroevolution/: BinaryIO.hpp  CMakeLists.txt  IPlayground.hpp  SparseMatrix.cpp  SparseMatrix.h  neuro_net.cpp  neuro_net.hpp  neuro_net2.cpp  neuro_net2.hpp  rng.cpp
profile/: CMakeLists.txt  main.cpp
seg/: CMakeLists.txt  agent.cpp  agent.hpp  graph.cpp  (+13 more)
seg_mutation/: CMakeLists.txt  main.cpp
shell/: CMakeLists.txt  IPlayground.hpp  MaxPG.cpp  MaxPG.hpp  NeatController.cpp  NeatController.hpp  NumberCmpPG.cpp  NumberCmpPG.hpp  TetrisPG.cpp  TetrisPG.hpp  main.cpp
src/: CMakeLists.txt  compile_commands.json
src/.cache/clangd/index/: Board.cpp.2DCCAD05306686C1.idx  Board.h.522A8EF94BACE9CF.idx  ControlPanelCtrl.cpp.D726EB953997DAD1.idx  ControlPanelCtrl.hpp.4BC7FC09B2A34EA5.idx  CrossoverTest.cpp.EB05231897E8BB22.idx  Defines.hpp.ACE5B350866A424E.idx  Engine.hpp.93B5A23C2D86715A.idx  EvolutionStrategy.hpp.60E83EBD0426B921.idx  Game.cpp.FD1DF8853520FB70.idx  Game.h.BE672BC8FE0C4C40.idx  HistoryPanel.cpp.FCB30FB008E9BDE2.idx  HistoryPanel.hpp.B6F0B7AE9CB1782B.idx  IO.h.EE38E42E11351BB5.idx  IPlayground.hpp.2C07CCB1B1196AEC.idx  IPopulation.hpp.087291491302DEA4.idx  IProject.hpp.CD578FC848DC9BC8.idx  InnovationHistory.cpp.8961195DD32C33F8.idx  InnovationHistory.hpp.EF560B63B3B405B0.idx  Logger.cpp.2A9475FDDF258D7A.idx  Logger.hpp.9BE551341CA7578D.idx  LogicalPG.cpp.DBA504BB77E8F826.idx  LogicalPG.hpp.91B3E4BA3C7D43ED.idx  MainMenuCtrl.cpp.1054E42A851EADF9.idx  MainMenuCtrl.hpp.AAF9860A8012D080.idx  MutationTest.cpp.290FBFD8CFC02C82.idx  NaturalSelectionTest.cpp.14A54E56DD0001EA.idx  NeatPopulation.cpp.EAF6B39CA4351515.idx  NeatPopulation.hpp.9A7524BBFE964DAD.idx  NeatProject.cpp.6AE668A3EE37489A.idx  NeatProject.hpp.2DE1A3383806756C.idx  NeuroNetTest.cpp.CFEB43CE790FDF66.idx  Pieces.cpp.A68B7BBFC30749FF.idx  Pieces.h.A45FB8E4BA6B5F6E.idx  PopulationPanel.cpp.1C801DD5CC1CED56.idx  PopulationPanel.hpp.AF8A7906FF4C7CD8.idx  ProjectBase.cpp.65225BDCBF88F1D5.idx  ProjectBase.hpp.BCC3C71988D3207D.idx  ProjectManager.cpp.AAED93C091D5B34C.idx  ProjectManager.hpp.08E7300E7B77A9FB.idx  RNNTest.cpp.E7F225329367E0D9.idx  (+43 more)
src/GUI/: CMakeLists.txt  ControlPanelCtrl.cpp  IPopulation.hpp  IProject.hpp  MainMenuCtrl.cpp  ProjectManager.cpp  ProjectManager.hpp  Trainer.cpp  main.cpp
src/GUI/panels/: HistoryPanel.cpp  PopulationPanel.cpp  RawOutPanel.cpp  RawOutPanel.hpp  SpeciePanel.cpp  SpeciePanel.hpp
src/GUI/projects/: NeatPopulation.cpp  NeatPopulation.hpp  NeatProject.cpp  NeatProject.hpp  ProjectBase.cpp  ProjectBase.hpp  S4Project.cpp  S4Project.hpp
src/GUI/widgets/: nn_view.cpp  nn_view.hpp  pgitems.cpp  pgitems.hpp  plot.h  propertygrid.cpp  propertygrid.hpp
src/SORI/: CMakeLists.txt  components.cpp  components.hpp  data.cpp  data.hpp  database.cpp  database.hpp  environment.cpp  environment.hpp  pop.cpp  pop.hpp  sori.cpp  sori.hpp  statistics.hpp  task.hpp
src/SORI/pop_reader/: CMakeLists.txt  main.cpp
src/client/: client.py
src/client2/: client.py
src/dng/: CMakeLists.txt  drawing.cpp  drawing.hpp  geometry.cpp  geometry.hpp  primitives.hpp  shape.cpp  shape.hpp
src/gacommon/: BinaryIO.hpp  CMakeLists.txt  IPlayground.hpp  activation.hpp  natural_selection.hpp  neuro_net2.cpp  neuro_net2.hpp
src/host/: CMakeLists.txt  Engines.cpp  Engines.hpp  Host.cpp  Host.hpp  Playgrounds.cpp  Playgrounds.hpp  Project.hpp  main.cpp
src/host2/: CMakeLists.txt  Host.cpp  Host.hpp  IProject.hpp  Project.hpp  main.cpp  sori.cpp  sori.hpp
src/logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/neat/: CMakeLists.txt  EvolutionStrategy.hpp  InnovationHistory.cpp  genom.cpp  genom.hpp  neat.cpp  neat.hpp  population.cpp  population.hpp
src/playgrounds/: CMakeLists.txt  CalculatorPG.cpp  CalculatorPG.hpp  LogicalPG.cpp  LogicalPG.hpp  TetrisPG.cpp  TetrisPG.hpp
src/snake4/: CMakeLists.txt  mutations.cpp  pop.cpp  snake4.cpp  snake4.hpp  system.cpp  system.hpp
src/snake5/: CMakeLists.txt  mutations.cpp  mutations.hpp  pop.cpp  pop.hpp  snake5.hpp  system.hpp
src/tasks/: CMakeLists.txt  ObjectDetection.cpp  ObjectDetection.hpp  Task.hpp  manager.cpp  manager.hpp
src/tasksDemo/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt  CrossoverTest.cpp  NaturalSelectionTest.cpp  NeuroNetTest.cpp  RNNTest.cpp  SaveLoadStateTest.cpp  ShapeTest.cpp  SnakeGATest.cpp  SoriBrokenPopsTest.cpp  SoriCompsTest.cpp  SoriConvergenceTest.cpp  SoriDataTest.cpp  SoriMutationsTest.cpp  SoriSaveLoadTest.cpp  SpecieTest.cpp  TaskLibTest.cpp
src/tetris/: Board.cpp  Board.h  CMakeLists.txt  Defines.hpp  IO.h  Tetris.cpp  Tetris.hpp
test/: CMakeLists.txt  CrossoverTest.cpp  FitnessWeightedPoolTest.cpp  GraphMutationTest.cpp  GraphTraversalTest.cpp  InterpreterTest.cpp  MutationTest.cpp  NeuroNetTest.cpp  PopulationTest.cpp  RNNTest.cpp  SGA_genom_stress_test.cpp  SaveLoadStateTest.cpp  SnakeGATest.cpp  SpeciationTest.cpp  SpecieTest.cpp
(+26 files in other folders)
